// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<MyText
  style={
    Object {
      "color": "#B2B0B2",
      "fontSize": 12,
    }
  }
  testID="Text"
>
  1:51 PM
</MyText>
`;

exports[`renders correctly with format 1`] = `
<MyText
  style={
    Object {
      "color": "#B2B0B2",
      "fontSize": 12,
    }
  }
  testID="Text"
>
  Monday @ 1:51 PM
</MyText>
`;
